--- a/txt_bank_report/views/views.xml
+++ b/txt_bank_report/views/views.xml
@@ -14,7 +14,7 @@
           <field name="inherit_id" ref="base.view_res_bank_form"/>
           <field name="arch" type="xml">
               <xpath expr="//field[@name='bic']" position="after">
-                  <field name="payment_code"/>
+                  <field name="payment_code" placeholder="Acronimo del Banco" help="Acronimo del Banco Ej.: en el caso del Banco Popular Dominicano seria BPD. "/>
               </xpath>
           </field>
       </record>
